kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production-app
  labels:
    name: production-app
    environment: production
